/*
 * Copyright 2024 Safe Health Systems, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package cdx.opencdx.client.service.impl;

import cdx.opencdx.client.dto.OpenCDXCallCredentials;
import cdx.opencdx.client.exceptions.OpenCDXClientException;
import cdx.opencdx.client.service.OpenCDXProviderClient;
import cdx.opencdx.grpc.provider.*;
import com.google.rpc.Code;
import io.grpc.ManagedChannel;
import io.grpc.StatusRuntimeException;
import io.micrometer.observation.annotation.Observed;
import lombok.Generated;
import lombok.extern.slf4j.Slf4j;

/**
 * Implementation of the Provider gRPC Client.
 */
@Slf4j
@Observed(name = "opencdx")
public class OpenCDXProviderClientImpl implements OpenCDXProviderClient {

    private static final String OPEN_CDX_PROVIDER_CLIENT_IMPL = "OpenCDXProviderClientImpl";
    private final ProviderServiceGrpc.ProviderServiceBlockingStub providerServiceBlockingStub;

    /**
     * Default Constructor used for normal operation.
     * @param channel ManagedChannel for the gRPC Service invocations.
     */
    @Generated
    public OpenCDXProviderClientImpl(ManagedChannel channel) {
        this.providerServiceBlockingStub = ProviderServiceGrpc.newBlockingStub(channel);
    }
    /**
     * Constructor for creating the Provider client implementation.
     * @param providerServiceBlockingStub gRPC Blocking Stub for Provider.
     */
    public OpenCDXProviderClientImpl(ProviderServiceGrpc.ProviderServiceBlockingStub providerServiceBlockingStub) {
        this.providerServiceBlockingStub = providerServiceBlockingStub;
    }

    /**
     * Method to gRPC Call Provider Service getProviderByNumber() api.
     *
     * @param request                GetProviderRequest to pass
     * @param openCDXCallCredentials Call Credentials to use for send.
     * @return Message response.
     */
    @Override
    public GetProviderResponse getProviderByNumber(
            GetProviderRequest request, OpenCDXCallCredentials openCDXCallCredentials) throws OpenCDXClientException {
        try {
            return providerServiceBlockingStub
                    .withCallCredentials(openCDXCallCredentials)
                    .getProviderByNumber(request);
        } catch (StatusRuntimeException e) {
            com.google.rpc.Status status = io.grpc.protobuf.StatusProto.fromThrowable(e);
            throw new OpenCDXClientException(
                    Code.forNumber(status.getCode()),
                    OPEN_CDX_PROVIDER_CLIENT_IMPL,
                    1,
                    status.getMessage(),
                    status.getDetailsList(),
                    e);
        }
    }

    /**
     * Method to gRPC Call Provider Service deleteProvider() api.
     *
     * @param request                DeleteProviderRequest to pass
     * @param openCDXCallCredentials Call Credentials to use for send.
     * @return Message response.
     */
    @Override
    public DeleteProviderResponse deleteProvider(
            DeleteProviderRequest request, OpenCDXCallCredentials openCDXCallCredentials)
            throws OpenCDXClientException {
        try {
            return providerServiceBlockingStub
                    .withCallCredentials(openCDXCallCredentials)
                    .deleteProvider(request);
        } catch (StatusRuntimeException e) {
            com.google.rpc.Status status = io.grpc.protobuf.StatusProto.fromThrowable(e);
            throw new OpenCDXClientException(
                    Code.forNumber(status.getCode()),
                    OPEN_CDX_PROVIDER_CLIENT_IMPL,
                    2,
                    status.getMessage(),
                    status.getDetailsList(),
                    e);
        }
    }

    /**
     * Method to gRPC Call Provider Service listProviders() api.
     *
     * @param request                ListProvidersRequest to pass
     * @param openCDXCallCredentials Call Credentials to use for send.
     * @return Message response.
     */
    @Override
    public ListProvidersResponse listProviders(
            ListProvidersRequest request, OpenCDXCallCredentials openCDXCallCredentials) throws OpenCDXClientException {
        try {
            return providerServiceBlockingStub
                    .withCallCredentials(openCDXCallCredentials)
                    .listProviders(request);
        } catch (StatusRuntimeException e) {
            com.google.rpc.Status status = io.grpc.protobuf.StatusProto.fromThrowable(e);
            throw new OpenCDXClientException(
                    Code.forNumber(status.getCode()),
                    OPEN_CDX_PROVIDER_CLIENT_IMPL,
                    3,
                    status.getMessage(),
                    status.getDetailsList(),
                    e);
        }
    }

    /**
     * Method to gRPC Call Provider Service loadProvider() api.
     *
     * @param request                LoadProviderRequest to pass
     * @param openCDXCallCredentials Call Credentials to use for send.
     * @return Message response.
     */
    @Override
    public LoadProviderResponse loadProvider(LoadProviderRequest request, OpenCDXCallCredentials openCDXCallCredentials)
            throws OpenCDXClientException {
        try {
            return providerServiceBlockingStub
                    .withCallCredentials(openCDXCallCredentials)
                    .loadProvider(request);
        } catch (StatusRuntimeException e) {
            com.google.rpc.Status status = io.grpc.protobuf.StatusProto.fromThrowable(e);
            throw new OpenCDXClientException(
                    Code.forNumber(status.getCode()),
                    OPEN_CDX_PROVIDER_CLIENT_IMPL,
                    4,
                    status.getMessage(),
                    status.getDetailsList(),
                    e);
        }
    }
}
